--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,17 @@
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
 .App {
     text-align: center;
 }
@@ -28,6 +42,13 @@
     color: #61dafb;
 }
 
+.App-body {
+    margin: 0 5%;
+}
+.App-body p {
+    text-align: justify;
+}
+
 @keyframes App-logo-spin {
     from {
         transform: rotate(0deg);
@@ -36,3 +57,6 @@
         transform: rotate(360deg);
     }
 }
+
+
+/*# sourceMappingURL=main.css.map*/
